Return a flag indicating if rbac is on and a username